--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.jpa.open-in-view=false
 
 security.jwt.secret-key=${JWT_SECRET_KEY}
 security.jwt.expiration-time=${JWT_EXPIRATION_TIME}
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
