--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring-booking-system
 
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.web.resources.add-mappings=false
 
@@ -10,8 +10,8 @@ spring.web.resources.add-mappings=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
-security.jwt.secret-key=${JWT_SECRET_KEY}
-security.jwt.expiration-time=${JWT_EXPIRATION_TIME}
+security.jwt.secret-key=${JWT_SECRET}
+security.jwt.expiration-time=${JWT_EXPIRATION}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
