feat: Added new ENtities and endpoints to implement practice upload in frontend. Sorry for this stupid fat commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.task.scheduling.enabled=true
+
+file.upload-dir=/home/alex/Documents/laravel/ProyectoReservas/spring-booking-system/uploads/
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
